# Cache

./: CMakeLists.txt  README.md  cache.cpp  cache.h  main  test  test_creater.cpp
Cache/: cache.h
lfu_cache/: CMakeLists.txt
lfu_cache/include/: cache.hpp
lfu_cache/src/: main.cpp
perfect_cache/: CMakeLists.txt
perfect_cache/include/: perfectCache.hpp
perfect_cache/src/: main.cpp
test/: CMakeLists.txt  Makefile  gtest.cpp  main.cpp  test.cpp  test.txt  test_creater.cpp
test/tests/: TestLFU0.txt  TestLFU1.txt  TestLFU2.txt  bigtest.txt  test.txt
